maplesoft.com (archived on 2007-12-28)
{
  "alexa_rank": NaN,
  "analysis_subcorpus": true,
  "categories": "business;education",
  "char_count": 5362,
  "classifier_probability": 0.87,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 13.1,
  "homepage_snapshot_redirected_domain": "maplesoft.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20071001103253id_/http://www.maplesoft.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20071001103253id_/http%3A//maplesoft.com",
  "interval": "2007_B",
  "link_text": "Privacy",
  "parked_domain": false,
  "phase": "B",
  "policy_domain": "maplesoft.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20071228180024id_/http%3A//www.maplesoft.com/privacy",
  "policy_title": "Our Position on Privacy and Data Protection - Maplesoft",
  "policy_url": "maplesoft.com/privacy",
  "sha1": "012421bb71202dd547acb3689d5884ffbc8018f2",
  "simhash": 13523061362216578890,
  "simhash_updated": false,
  "site_hostname": "maplesoft.com",
  "site_url": "http://maplesoft.com",
  "smog": 16.57,
  "strict_updated": true,
  "timestamp": "20071228180024",
  "word_count": 849,
  "year": 2007
}

--- a/m/ma/map/maplesoft.com.html
+++ b/m/ma/map/maplesoft.com.html
@@ -1,8 +1,7 @@
-<!--The following is the downloaded HTML source of the maplesoft.com privacy policy that was archived on 2007-06-12.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20070612224155id_/http%3A//www.maplesoft.com/privacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the maplesoft.com privacy policy that was archived on 2007-12-28.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20071228180024id_/http%3A//www.maplesoft.com/privacy) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN"><html><head>
-
 
 <script language="javascript">
 //populates the MSegment variable with the value of the .MemberSegment cookie
@@ -30,68 +29,6 @@
 </script>
 
 
-
-<!--WEBSIDESTORY CODE HBX1.0 (Universal)-->
-<!--COPYRIGHT 1997-2004 WEBSIDESTORY,INC. ALL RIGHTS RESERVED. U.S.PATENT No. 6,393,479B1. MORE INFO:http://websidestory.com/privacy-->
-<script language="javascript">
-var _hbEC=0,_hbE=new Array;function _hbEvent(a,b){b=_hbE[_hbEC++]=new Object();b._N=a;b._C=0;return b;}
-var hbx=_hbEvent("pv");hbx.vpc="HBX0100u";hbx.gn="ehg-maplesoft.hitbox.com";
-
-//BEGIN EDITABLE SECTION
-//CONFIGURATION VARIABLES
-hbx.acct="DM540814CAEZ96EN3";//ACCOUNT NUMBER(S)
-hbx.pn="Main+page";//PAGE NAME(S)
-hbx.mlc="/privacy";//MULTI-LEVEL CONTENT CATEGORY
-hbx.pndef="title";//DEFAULT PAGE NAME
-hbx.ctdef="full";//DEFAULT CONTENT CATEGORY
-
-//OPTIONAL PAGE VARIABLES
-//ACTION SETTINGS
-hbx.fv="";//FORM VALIDATION MINIMUM ELEMENTS OR SUBMIT FUNCTION NAME
-hbx.lt="auto";//LINK TRACKING
-hbx.dlf="n";//DOWNLOAD FILTER
-hbx.dft="n";//DOWNLOAD FILE NAMING
-hbx.elf="n";//EXIT LINK FILTER
-
-//SEGMENTS AND FUNNELS
-hbx.seg="";//VISITOR SEGMENTATION
-hbx.fnl="";//FUNNELS
-
-//CAMPAIGNS
-hbx.cmp="";//CAMPAIGN ID
-hbx.cmpn="";//CAMPAIGN ID IN QUERY
-hbx.dcmp="";//DYNAMIC CAMPAIGN ID
-hbx.dcmpn="";//DYNAMIC CAMPAIGN ID IN QUERY
-hbx.dcmpe="";//DYNAMIC CAMPAIGN EXPIRATION
-hbx.dcmpre="";//DYNAMIC CAMPAIGN RESPONSE EXPIRATION
-hbx.hra="";//RESPONSE ATTRIBUTE
-hbx.hqsr="";//RESPONSE ATTRIBUTE IN REFERRAL QUERY
-hbx.hqsp="";//RESPONSE ATTRIBUTE IN QUERY
-hbx.hlt="";//LEAD TRACKING
-hbx.hla="";//LEAD ATTRIBUTE
-hbx.gp="";//CAMPAIGN GOAL
-hbx.gpn="";//CAMPAIGN GOAL IN QUERY
-hbx.hcn="";//CONVERSION ATTRIBUTE
-hbx.hcv="";//CONVERSION VALUE
-hbx.cp="null";//LEGACY CAMPAIGN
-hbx.cpd="";//CAMPAIGN DOMAIN
-
-//CUSTOM VARIABLES
-hbx.ci="";//CUSTOMER ID
-hbx.hc1="";//CUSTOM 1
-hbx.hc2="";//CUSTOM 2
-hbx.hc3="";//CUSTOM 3
-hbx.hc4="";//CUSTOM 4
-hbx.hrf="";//CUSTOM REFERRER
-hbx.pec="";//ERROR CODES
-
-//INSERT CUSTOM EVENTS
-
-//END EDITABLE SECTION
-
-//REQUIRED SECTION. CHANGE "YOURSERVER" TO VALID LOCATION ON YOUR WEB SERVER (HTTPS IF FROM SECURE SERVER)
-</script><script language="javascript1.1" defer="" src="http://www.maplesoft.com/JS/hbx.js"></script>
-<!--END WEBSIDESTORY CODE-->
 
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
 <meta name="keywords" content="Maplesoft, Waterloo Maple, Waterloo, maple, mathematics software, mathematics education, mathematics teaching, computer algebra, symbolic computation, mathematical modeling software, mathematics assessment software, distance education software, e-learning software">
@@ -248,7 +185,7 @@ urchinTracker();
             <td><span class="legal"><a href="/products/maplenet/index.aspx" name="&amp;lid=//products//MapleNet" class="rower">MapleNet</a></span></td>
           </tr>
           <tr> 
-            <td><span class="legal"><a href="/products/studyguides/" name="&amp;lid=//products//studyguides" class="rower">eBooks 
+            <td><span class="legal"><a href="/products/studyguides/" name="&amp;lid=//products//studyguides" class="rower">E-Books 
               &amp; Study Guides</a></span></td>
           </tr>
           <tr> 
@@ -353,9 +290,9 @@ urchinTracker();
 <div id="Support" style="position:absolute; left:245px; top:87px; width:58px; height:55px; z-index:1; visibility: hidden;">
   <table width="125" border="0" cellspacing="0" cellpadding="0">
     <tbody><tr>
-      <td width="10" rowspan="3"><a href="javascript:;" onmouseover="MM_showHideLayers('Support','','hide')" hbxrootmenuid="//support" hbxrootmenuorientation="down"><img src="/Common/redesign04/images/1x1trans.gif" width="40" height="170" border="0"></a></td>
+      <td width="10" rowspan="3"><a href="javascript:;" onmouseover="MM_showHideLayers('Support','','hide')" hbxrootmenuid="//support" hbxrootmenuorientation="down"><img src="/Common/redesign04/images/1x1trans.gif" width="40" height="178" border="0"></a></td>
       <td width="780"><img src="/Common/redesign04/images/1x1trans.gif" width="125" height="10"></td>
-      <td width="10" rowspan="3"><a href="javascript:;" onmouseover="MM_showHideLayers('Support','','hide')"><img src="/Common/redesign04/images/1x1trans.gif" width="40" height="170" border="0"></a></td>
+      <td width="10" rowspan="3"><a href="javascript:;" onmouseover="MM_showHideLayers('Support','','hide')"><img src="/Common/redesign04/images/1x1trans.gif" width="40" height="178" border="0"></a></td>
     </tr>
     <tr>
       <td height="21" valign="top"><table width="135" border="0" cellpadding="0" cellspacing="0">
@@ -366,9 +303,18 @@ urchinTracker();
           <tr> 
             <td><span class="legal"><a href="/support/training/index.aspx" name="&amp;lid=//resources//training" class="rower">Training</a></span></td>
           </tr>
+          <tr>
+            <td><span class="legal"><a href="/teachercenter/index.aspx" name="&amp;lid=//resources//teacher+resource+center" class="rower">Teacher Resource Center</a></span></td>
+          </tr>
+          <tr>
+            <td><span class="legal"><a href="/studentcenter/index.aspx" name="&amp;lid=//resources//student+help+center" class="rower">Student Help Center</a></span></td>
+          </tr>
           <tr> 
             <td><span class="legal"><a href="/company/reporter/" name="&amp;lid=//resources//reporter" class="rower">Maple 
               Reporter</a></span></td>
+          </tr>
+          <tr>
+            <td><span class="legal"><a href="/company/casestudies/application_briefs/index.aspx" name="&amp;lid=//resources//application+briefs" class="rower">Application Briefs</a></span></td>
           </tr>
           <tr> 
             <td><span class="legal"><a href="http://www.maplesoft.com/subscribers/subscription_list.aspx" name="&amp;lid=//resources//subscriptions" class="rower">Subscriptions</a></span></td>
@@ -418,6 +364,9 @@ urchinTracker();
       <td height="21" valign="top"><table width="130" border="0" cellpadding="0" cellspacing="0">
         <tbody><tr>
           <td><span class="legal"><a href="/applications/index.aspx" name="&amp;lid=//community//application+center" class="rower">Application Center</a></span></td>
+        </tr>
+        <tr>
+          <td><span class="legal"><a href="/tacontent/index.aspx" name="&amp;lid=//community//tacontent" class="rower">Maple T.A. Content Center</a></span></td>
         </tr>
         <tr>
           <td><span class="legal"><a href="http://www.mapleprimes.com/" name="&amp;lid=//community//mapleprimes" class="rower">MaplePrimes</a></span></td>
@@ -550,7 +499,26 @@ urchinTracker();
     <td><img src="/Common/redesign04/images2/horizontal_line_grey3.gif" width="100%" height="5"></td>
   </tr>
 </tbody></table>
- 
+ <!-- SiteCatalyst code version: H.14. Copyright 1997-2007 Omniture, Inc. More info available at http://www.omniture.com --><script language="JavaScript" src="/omniture/s_code.js"></script><img name="s_i_albertotresemmecom" height="1" width="1" border="0" alt="" src="https://albertoculver.122.2O7.net/b/ss/albertotresemmecom/1/H.2-pdv-2/s16568766860206?[AQB]&amp;ndh=1&amp;t=30/0/2020%209%3A17%3A35%204%200&amp;ns=albertoculver&amp;pageName=Privacy%20Policy&amp;g=https%3A//web.archive.org/web/20071228180024id_/http%3A//www.maplesoft.com/privacy/&amp;cc=USD&amp;ch=Company&amp;server=North%20America&amp;events=%2Cevent4&amp;h1=Company&amp;c3=english&amp;c13=Non-Member&amp;v13=Non-Member&amp;s=800x600&amp;c=24&amp;j=1.3&amp;v=N&amp;k=Y&amp;bw=1366&amp;bh=768&amp;[AQE]"><script language="JavaScript">/* You may give each page an identifying name, server, and channel on the next lines. */
+s.pageName="Privacy Policy"
+s.server="North America"
+s.channel="Company"
+s.pageType=""
+s.prop3="english"
+s.prop13="Non-Member"
+/* Conversion Variables */
+s.campaign=""
+s.state=""
+s.zip=""
+s.events=""
+s.products=""
+s.purchaseID=""
+s.eVar13="Non-Member"
+s.hier1="Company"
+/************* DO NOT ALTER ANYTHING BELOW THIS LINE ! **************/
+var s_code=s.t();if(s_code)document.write(s_code)//-->
+</script><!-- End SiteCatalyst code version: H.14. -->
+
 <div align="left">
   <table width="99%" border="0" cellspacing="0" cellpadding="0">
     <tbody><tr>
@@ -676,6 +644,7 @@ urchinTracker();
     <td>
 	<a href="/Members/sign_up_form.aspx" class="leftnavlist">Become a member<br></a>
 	<a href="/company/reporter/subscribe.aspx" class="leftnavlist">Subscribe to the Maple Reporter<br></a>  
+	<a href="/feeds.aspx" class="leftnavlist">RSS<br></a>
 </td>
 </tr>
 </tbody></table>
@@ -789,7 +758,7 @@ urchinTracker();
     
 			</p><p>
             <b>Contact Information</b><br>
-        If you have questions concerning this privacy policy please contact <a href="mailto:privacy@maplesoft.com" class="plainlink">privacy@maplesoft.com.</a><br>
+        To ask questions or express concerns, please contact our Privacy Officer by email at <a href="mailto:privacy@maplesoft.com" class="plainlink">privacy@maplesoft.com</a>, or by postal mail at: Maplesoft’s Privacy Officer, 615 Kumpf Drive, Waterloo, ON, Canada, N2V1K8. The Privacy Officer will investigate any complaints that concern our compliance with this privacy policy.<br>
         <br>
                     </p>
                   </td>
