--- a/f/ft/ftd/ftdfloristsonline.com.html
+++ b/f/ft/ftd/ftdfloristsonline.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the ftdfloristsonline.com privacy policy that was archived on 2007-06-14.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20070614165320id_/http%3A//www.ftdfloristsonline.com/ffo/privacy_security_home.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the ftdfloristsonline.com privacy policy that was archived on 2007-12-28.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20071228184921id_/http%3A//www.ftdfloristsonline.com/ffo/privacy_security_home.html) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head>
 <title> - Florist, Flowers, Flower Delivery, Send Flowers, Buy Flowers Online, </title>
@@ -21,17 +21,17 @@
     </tr>
     <tr>
         <td height="16" background="http://a80.g.akamai.net/f/80/71/6h/florists.ftd.com/pics/ffo/innerpg_toplinks.gif" class="text-semismall"><img src="http://a80.g.akamai.net/f/80/71/6h/florists.ftd.com/pics/ffo/clear.gif" alt="" height="10" width="20">
-	<a href="/index.html" class="white">Home</a> 
-	<img src="http://a80.g.akamai.net/f/80/71/6h/florists.ftd.com/pics/ffo/bullet.gif" width="12" height="8"> 
+	<a href="/index.html" class="white">Home</a>
+	<img src="http://a80.g.akamai.net/f/80/71/6h/florists.ftd.com/pics/ffo/bullet.gif" width="12" height="8">
 	<a href="/ffo/services.html" class="white">Our Services</a>
-	<img src="http://a80.g.akamai.net/f/80/71/6h/florists.ftd.com/pics/ffo/bullet.gif" width="12" height="8"> 
+	<img src="http://a80.g.akamai.net/f/80/71/6h/florists.ftd.com/pics/ffo/bullet.gif" width="12" height="8">
 	<a href="/ffo/faq.html" class="white">FAQ</a>
-	<img src="http://a80.g.akamai.net/f/80/71/6h/florists.ftd.com/pics/ffo/bullet.gif" width="12" height="8"> 
+	<img src="http://a80.g.akamai.net/f/80/71/6h/florists.ftd.com/pics/ffo/bullet.gif" width="12" height="8">
 	<a href="/ffo/contactus.html" class="white">Contact Us</a>
 	<img src="http://a80.g.akamai.net/f/80/71/6h/florists.ftd.com/pics/ffo/bullet.gif" width="12" height="8">
-	<a href="/ffo/fathers_day_flowers.html" class="greennav">Father's Day Flower</a>
-	<img src="http://a80.g.akamai.net/f/80/71/6h/florists.ftd.com/pics/ffo/bullet.gif" width="12" height="8"> 
-	<a href="/ffo/men_and_flowers.html">Men and Flowers</a>
+	<a href="/ffo/winter_warmth.html">Winter Warmth</a>
+	<img src="http://a80.g.akamai.net/f/80/71/6h/florists.ftd.com/pics/ffo/bullet.gif" width="12" height="8">
+	<a href="/ffo/seasonal_splendor.html">Seasonal Splendor</a>
 	<img src="http://a80.g.akamai.net/f/80/71/6h/florists.ftd.com/pics/ffo/bullet.gif" width="12" height="8">
 	<a href="/ffo/community_greenhouse.html" class="greennav">The Greenhouse</a> </td>
     </tr>
@@ -173,7 +173,7 @@ For our Sites that accept international orders, if you are located outside of th
     </tr>
     <tr>
         <td class="text-semismall"><center>
-<a href="/ffo/privacy_security_home.html">Privacy &amp; Security </a>            
+<a href="/ffo/privacy_security_home.html">Privacy &amp; Security </a>
         </center></td>
     </tr>
 </tbody></table>
