--- a/a/ar/arc/arcadetown.com.html
+++ b/a/ar/arc/arcadetown.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the arcadetown.com privacy policy that was archived on 2007-06-26.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20070626142754id_/http%3A//www.arcadetown.com/privacy.asp) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the arcadetown.com privacy policy that was archived on 2007-12-28.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20071228185708id_/http%3A//www.arcadetown.com/privacy.asp) for the most accurate reproduction.-->
 
 <html><!-- #BeginTemplate "/Templates/stdpopuppage.dwt" --><!-- DW6 --><head>
 <!-- #BeginEditable "ERHead" --><!-- #EndEditable -->
@@ -67,8 +67,7 @@ may use information (not including your name, address, email address or telephon
 number) about your visits to this and other Web sites in order to provide advertisements 
 on this site and other sites about goods and services that may be of interest 
 to you. If you would like more information please see the <a href="http://www.fastclick.com/co_privacy.html" target="_blank">FastClick 
-Privacy Statement</a>, <a href="http://www.networkadvertising.org/optout_nonppii.asp" target="_blank"> 
-MaxOnline Privacy Statement</a>, <a href="http://www.valueclick.com/privacy.html">ValueClick 
+Privacy Statement</a>, <a href="http://www.valueclick.com/privacy.html">ValueClick 
 Privacy Statement</a>, <a href="http://www.casalemedia.com/privacy.html" target="_blank">Casale 
 Media Privacy Statement</a>, <a href="http://www.tribalfusion.com/www/about/privacy.html" target="_blank">Tribal 
 Fusion Privacy Statement</a>, and <a href="http://www.google.com/privacy.html" target="_blank">Google 
@@ -78,7 +77,7 @@ Privacy Statement</a>. </p>
 practices or the content of such Web sites.</p>
 <p> <b>CONTACTING OUR WEB SITE<br>
 </b>If you have any comments or questions about this privacy statement or any 
-other issues you can <a href="contact.asp">contact us</a>.</p>
+other issues you can <a href="/contact.asp">contact us</a>.</p>
 <!-- #EndEditable -->
 </td></tr>
 <tr>
