--- a/d/di/dip/diplomatie.be.html
+++ b/d/di/dip/diplomatie.be.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the diplomatie.be privacy policy that was archived on 2007-06-14.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20070614131216id_/http%3A//www.diplomatie.be/en/Privacy/privacystatement.asp) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the diplomatie.be privacy policy that was archived on 2007-12-28.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20071228192756id_/http%3A//www.diplomatie.be/en/Privacy/privacystatement.asp) for the most accurate reproduction.-->
 
 <html lang="en"><!-- #BeginTemplate "/Templates/privacyEN.dwt" --><!-- DW6 --><head>
 <!-- #BeginEditable "doctitle" -->
@@ -33,7 +33,7 @@
 
 <!-- #BeginLibraryItem "/Library/TopMenuEN.lbi" -->
 <link href="../../common/styles/style.css" rel="stylesheet" type="text/css">
-<link rel="SHORTCUT ICON" href="../../common/images/diplomatie.ico">
+<link rel="SHORTCUT ICON" href="http://bru1sps02/PublishingImages/diplomatie.ico">
 <script language="JavaScript" type="text/javascript">
 <!--
 		  function checkWhites(myform){
@@ -211,7 +211,7 @@ function getLoc(c) {
 </tbody></table>
 <table width="100%" border="0">
   <tbody><tr>
-    <td class="breadcrum"><script language="JavaScript">breadCrumbs("diplobelnew",">","default.asp","bluetext","bluetext","bluetext","0");</script><a href="../../../../../../../../default.asp" class="bluetext">Home</a>  <span class="bluetext">&gt;</span> <a href="../../../../../../../default.asp" class="bluetext">.archive.org</a>  <span class="bluetext">&gt;</span> <a href="../../../../../../default.asp" class="bluetext">Web</a>  <span class="bluetext">&gt;</span> <a href="../../../../../default.asp" class="bluetext">20070614131216id_</a>  <span class="bluetext">&gt;</span> <a href="../../../../default.asp" class="bluetext">Http:</a>  <span class="bluetext">&gt;</span> <a href="../../../default.asp" class="bluetext"></a>  <span class="bluetext">&gt;</span> <a href="../../default.asp" class="bluetext">Www.diplomatie.be</a>  <span class="bluetext">&gt;</span> <a href="../default.asp" class="bluetext">En</a>  <span class="bluetext">&gt;</span> <a href="default.asp" class="bluetext">Privacy</a>  <span class="bluetext">&gt;</span> <span class="bluetext">Privacy</span></td>
+    <td class="breadcrum"><script language="JavaScript">breadCrumbs("diplobelnew",">","default.asp","bluetext","bluetext","bluetext","0");</script><a href="../../../../../../../../default.asp" class="bluetext">Home</a>  <span class="bluetext">&gt;</span> <a href="../../../../../../../default.asp" class="bluetext">.archive.org</a>  <span class="bluetext">&gt;</span> <a href="../../../../../../default.asp" class="bluetext">Web</a>  <span class="bluetext">&gt;</span> <a href="../../../../../default.asp" class="bluetext">20071228192756id_</a>  <span class="bluetext">&gt;</span> <a href="../../../../default.asp" class="bluetext">Http:</a>  <span class="bluetext">&gt;</span> <a href="../../../default.asp" class="bluetext"></a>  <span class="bluetext">&gt;</span> <a href="../../default.asp" class="bluetext">Www.diplomatie.be</a>  <span class="bluetext">&gt;</span> <a href="../default.asp" class="bluetext">En</a>  <span class="bluetext">&gt;</span> <a href="default.asp" class="bluetext">Privacy</a>  <span class="bluetext">&gt;</span> <span class="bluetext">Privacy</span></td>
   </tr>
 </tbody></table>
 <!-- #EndLibraryItem --><table width="100%" cellspacing="0" cellpadding="0">
