--- a/s/si/sit/siteadvisor.pl.html
+++ b/s/si/sit/siteadvisor.pl.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the siteadvisor.pl privacy policy that was archived on 2007-03-20.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20070320093404id_/http%3A//www.siteadvisor.pl/privacypolicy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the siteadvisor.pl privacy policy that was archived on 2007-12-28.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20071228200437id_/http%3A//siteadvisor.pl/privacypolicy.html) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en"><head>
     <title>McAfee SiteAdvisor - Privacy policy</title>
@@ -17,10 +17,17 @@
 
 
 
+
 <script src="/script/submit.js" type="text/javascript"></script>
 
 <div id="header" class="clearfix">
-	<a href="/"><img src="/images/logo_siteadvisor.gif" width="275" height="47" text="SiteAdvisor: the Web, tested." alt="SiteAdvisor: the Web, tested." id="SAlogo" border="0"></a>	
+
+	<a href="/">
+
+	<img src="/images/logo_siteadvisor.gif" width="275" height="47" text="SiteAdvisor: the Web, tested." alt="SiteAdvisor: the Web, tested." id="SAlogo" border="0">
+
+	</a>	
+
 	<div id="headerForm">
 		<form id="lookupForm" action="/lookup/" onsubmit="return submitLookupForm('lookupForm')" method="GET">
                         <label>Look up a site report: 
@@ -33,12 +40,17 @@
 
 	<div id="globalNav">
 		<ul class="clearfix">	
-			<li><a href="/about/contact.html" id="contactUsLink" style="border:0;">Contact us</a></li>
+			<li><a href="http://www.mcafee.com" id="mcafeeLink" style="border:0;"><span style="font-weight:bold;color:#cc0000">McAfee</span> Home</a></li>
+
+			<li><a href="/about/contact.html" id="contactUsLink">Contact us</a></li>
+
 			<li><a href="/termsofservice.html" id="termsLink">Terms of service</a></li>
 			<li><a href="/privacypolicy.html">Privacy policy</a></li>
 		</ul>
 	</div><!-- /globalNav -->
 </div><!-- /header -->
+
+
 
 
 
@@ -52,16 +64,23 @@
 <div id="primaryNav">
 
 	<ul class="clearfix">	
+
 		<li><a href="/" class="tab" id="home"><span>Home</span></a></li>
 		<li><a href="/download/ie.html" class="tab" id="download"><span>Download</span></a></li>
+
 		<li><a href="/analysis/" class="tab" id="analysis"><span>Analysis</span></a></li>
-		<li><a href="http://www.mcafeehelp.com" class="tab" id="support"><span>Support</span></a></li>
+
+		<li><a href="http://www.mcafeehelp.com/?startover=true" class="tab" id="support"><span>Support</span></a></li>
+
+
 		<li><a href="http://blog.siteadvisor.com" class="tab" id="blog"><span>Blog</span></a></li>
 		<li><a href="/about/" class="tab" id="about"><span>About us</span></a></li>		
+
 	</ul>
 
 
 </div><!-- /primaryNav -->
+
 
 
 <div id="content" class="clearfix">
@@ -72,7 +91,7 @@
 				<h2 class="pgSection gray">The really big picture:</h2>
 		<ul class="standard">			<li>Your privacy is protected when you use the McAfee SiteAdvisor Web site (<a href="http://www.siteadvisor.com">www.siteadvisor.com</a>, the "Web Site") and when you use McAfee SiteAdvisor software. We won't sell or rent your personal information to outside parties. We won't share your personal information with outside parties except to comply with a legal order or to allow our suppliers to fulfill your request to purchase our software. It's that simple. </li>		</ul>
  				<h2 class="pgSection gray">Additional privacy information regarding use of SiteAdvisor's software</h2>
-				<ul start="2" class="standard">			<li>If you install McAfee's SiteAdvisor software on your computer, it checks our master database in order to display our safety ratings about the sites you search for or visit. For SiteAdvisor Plus users, we also check the links you use and encounter in e-mail or instant messaging programs. In order to perform these checks, our software must query our servers about these sites or links, because our database of safety ratings is far too large and too frequently changing for us to send it to you in advance when you download our software. But we collect the minimum information necessary to serve you, and your requests to us are anonymous. (Think of this as asking a tour guide in a new city you're visiting about how safe it would be to walk down "5th Street". You have to name the street to get an answer.) </li>			<li>We never store information about where specific users go online or about what specific users do online. We do keep master anonymous logs of which sites our users visit so we can prioritize those sites for retesting. But these logs contain no information about which users visited which sites -- no personally identifying information, and not even users' IP addresses. (Continuing our tour guide analogy, it's as if the tour guide immediately and permanently forgot who asked about 5th Street, but did make a mental note to check the safety of that street at some point in the future.) </li><li>Additional details are available in the "End User License Agreement" of our software.</li>		</ul>
+				<ul start="2" class="standard">			<li>If you install McAfee's SiteAdvisor software on your computer, it checks our master database in order to display our safety ratings about the sites you search for or visit. For SiteAdvisor Plus users, we also check the links you use and encounter in e-mail or instant messaging programs. In order to perform these checks, our software must query our servers about these sites or links, because our database of safety ratings is far too large and too frequently changing for us to send it to you in advance when you download our software. But we collect the minimum information necessary to serve you, and your requests to us are anonymous. (Think of this as asking a tour guide in a new city you're visiting about how safe it would be to walk down "5th Street". You have to name the street to get an answer.) </li>			<li>We never store information about where specific users go online or about what specific users do online. We do keep master anonymous logs of which sites our users visit so we can prioritize those sites for retesting. But these logs contain no information about which users visited which sites -- no personally identifying information, and not even users' IP addresses. (Continuing our tour guide analogy, it's as if the tour guide immediately and permanently forgot who asked about 5th Street, but did make a mental note to check the safety of that street at some point in the future.) </li><li>Our software periodically sends us a unique, anonymous number so that we know that our software is working properly for you. This helps us know how many people are using SiteAdvisor and helps us plan the resources necessary to continue to provide you the great SiteAdvisor service. (Sticking with the tour guide analogy, this allows the tour guide to know how many people are enjoying the tour, how big of a bus we need to accommodate the tour, and how much food to prepare for lunch!)</li><li>Additional details are available in the "End User License Agreement" of our software.</li>		</ul>
 				<h2 class="pgSection gray">Information we collect and how we use it</h2>
 				<ul class="standard">			<li>McAfee's SiteAdvisor product collects personally identifiable information such as name, e-mail, and your organization/company when you register as a user of our products, sign up for one of our newsletters, or register online with us to leave feedback about our products or our Web site ratings. We don't share this information with any outside parties, except that we may disclose this information to selected outside vendors to help process and fulfill any orders you may place with us. These companies are prohibited from using your personally identifiable information for any purpose other than for fulfilling the service you requested on our behalf. </li>			<li>If you optionally choose to register with us and leave feedback about a Web site, we'll show your "nickname" (if you provide one) together with your feedback comments. </li>			<li>From time to time We may offer users the opportunity to participate in optional product improvement programs, contests or other promotional programs at the explicit agreement of each user. We will explain how information is collected and used in each of these optional programs as they are announced. </li>			<li>In addition, we may disclose personally-identifiable and information: (i) to third parties when we have reason to believe that disclosing the information is necessary to identify, contact or bring legal action against someone who may be causing injury to or interference with (either intentionally or unintentionally) our rights or property, other members or users of the Web Site, or anyone else that could be harmed by such activities; and (ii) to third parties when we believe in good faith that the law requires it. </li>		</ul>
 				<h2 class="pgSection gray">Additional information we collect from users with our software installed</h2>
@@ -100,19 +119,29 @@
 
 
 
+
 <div id="footer" class="clearfix">
 
 	<ul id="footerNav">
-		<li style="border:0;">
-<a href="http://blog.siteadvisor.com/">Blog</a></li>
+
+		<li style="border:0;"><a href="http://blog.siteadvisor.com/">Blog</a></li>
 		<li><a href="/sitemap.html">Sitemap</a></li>
+
 		<li><a href="/termsofservice.html">Terms of service</a></li>
 		<li><a href="/privacypolicy.html">Privacy policy</a></li>		
+
 		<li><a href="/about/">About us</a></li>
-		<li><a href="http://www.mcafeehelp.com">Support</a></li>
+
+	        <li>
+
+		<a href="http://www.mcafeehelp.com/?startover=true" class="tab" id="support">
+
+	        <span>Support</span></a></li>
 		<li><a href="/analysis/">Analysis</a></li>
+
 		<li><a href="/download/ie.html">Download</a></li>
 		<li><a href="/">Home</a></li>
+
 	</ul><!-- /footerNav -->
 	<p id="footerCopyright">Copyright © 2007 McAfee, Inc.</p>
 			<form class="footerForm" action="">
@@ -146,6 +175,9 @@
 			</form>			
 
 </div><!-- /footer -->
+
+
+
 
 <!-- START OF WebTrends 7 at Mcafee TAG 1/30/06 -->
 <script type="text/javascript" language="Javascript"><!--
