--- a/r/ro/rod/rodanandfields.com.html
+++ b/r/ro/rod/rodanandfields.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the rodanandfields.com privacy policy that was archived on 2007-05-13.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20070513162024id_/http%3A//www.rodanandfields.com/customer_service/privacy_policy.tmpl) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the rodanandfields.com privacy policy that was archived on 2007-12-28.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20071228201709id_/http%3A//rodanandfields.com/customer_service/privacy_policy.tmpl) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en"><head>
 
@@ -413,6 +413,7 @@ tagVars += "&SESSIONVAR!skill=Rodan%20and%20Fields";
 
 
 <!-- BEGIN COREMETRICS -->
+
 <script language="javascript1.1" src="/js/coremetrics/v40/eluminate.js" type="text/javascript"></script>
 <script language="javascript1.1" src="/js/coremetrics/v40/cmdatatagutils.js" type="text/javascript"></script>
 
