--- a/t/th/the/thecro.com.html
+++ b/t/th/the/thecro.com.html
@@ -1,10 +1,10 @@
-<!--The following is the downloaded HTML source of the thecro.com privacy policy that was archived on 2007-06-29.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20070629073257id_/http%3A//www.thecro.com/%3Fq%3Dprivacy_policy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the thecro.com privacy policy that was archived on 2007-12-28.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20071228204956id_/http%3A//www.thecro.com/%3Fq%3Dprivacy_policy) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd"><html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en"><head>
   <title>The CRO Privacy Policy | the CRO</title>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-<style type="text/css" media="all">@import "/misc/drupal.css";</style>  <style type="text/css" media="all">@import "/modules/banner/banner.css";</style><style type="text/css" media="all">@import "/modules/event/event.css";</style><style type="text/css" media="all">@import "/themes/bluemarine/style.css";</style>  <script type="text/javascript"> </script>
+<style type="text/css" media="all">@import "/misc/drupal.css";</style>  <style type="text/css" media="all">@import "/modules/banner/banner.css";</style><style type="text/css" media="all">@import "/modules/cck/content.css";</style><style type="text/css" media="all">@import "/modules/event/event.css";</style><style type="text/css" media="all">@import "/themes/bluemarine/style.css";</style>  <script type="text/javascript"> </script>
   <script src="./inc/js/common.js" type="text/javascript" language="Javascript1.2"></script>
   <link rel="stylesheet" rev="Stylesheet" href="./inc/_css/croCSS.css" type="text/css" media="All" hreflang="en" charset="iso-8859-1">
 </head>
@@ -63,7 +63,7 @@
 
 				<tr>
 					<td align="right" valign="bottom">
-						<b>June 29, 2007</b>
+						<b>December 28, 2007</b>
 					</td>
 
 					<td><img src="/images/spacer.gif" width="6" height="23" border="0"></td>
@@ -119,7 +119,10 @@ Array
 	
     <td id="sidebar-left" style="width:170px;">
 		<div style="height: 10px; background-color:#87afe2;"></div>
-    	  <div class="block block-menu" id="block-menu-34">
+    	<div class="block-menu" style="padding: 0px 5px 0px 10px;"><h2 class="title"><a href="/view/blogs/landing" style="font-size: 1em;">THE CRO BLOG</a></h2>
+
+<div class="block-menu_separator"></div></div>
+  <div class="block block-menu" id="block-menu-34">
     <h2 class="title">TOPICS</h2>
     <div class="content">
 <ul class="menu">
@@ -220,7 +223,7 @@ Array
 </tbody></table>
 
 
-<div style="width:950px;text-align:center;padding:5px 0px 5px 0px;font-size:80%;">	Copyright © 2006-2007 CRO Corp, LLC. All rights reserved. site design by <a href="http://www.lucita.net" target="_blank">LUCITA</a>
+<div style="width:950px;text-align:center;padding:5px 0px 5px 0px;font-size:80%;">	Copyright © 2006-2007 CRO Corp, LLC. All rights reserved. Site design by <a href="http://www.lucita.net" target="_blank">LUCITA</a>.
 </div>
 
 
