--- a/c/co/coo/coolquiz.com.html
+++ b/c/co/coo/coolquiz.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the coolquiz.com privacy policy that was archived on 2007-06-08.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20070608042356id_/http%3A//www.coolquiz.com/Network/privacy_statement.asp) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the coolquiz.com privacy policy that was archived on 2007-12-28.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20071228210448id_/http%3A//www.coolquiz.com/Network/privacy_statement.asp) for the most accurate reproduction.-->
 
 <html><head><script language="JavaScript1.2" src="/nav/fw_menu.js"></script>
 <script language="JavaScript1.2" src="/nav/menulist_2.js"></script>
@@ -259,8 +259,8 @@ i=u+x+'&sid='+id+'&m=1&f=b&v=1.4&c='+f+'&r='+escape(dc.referrer);
 u='<a  hr'+'ef="'+u+'/click.here?sid='+id+'&m=1&c='+f+'"  target="_blank">';
 dc.writeln('<ifr'+'ame src="'+i+'&d=f"'+t+'0 hspace=0 vspace=0 frameborder=0 scrolling=no>');
 if(navigator.appName.indexOf('Mic')<=0){dc.writeln(u+'<img src="'+i+'&d=n"'+z+'></a>');}
-dc.writeln('</iframe>'); // --></script><iframe src="http://media.fastclick.net/w/get.media?t=n&amp;sid=1850&amp;m=1&amp;f=b&amp;v=1.4&amp;c=3287&amp;r=&amp;d=f" width="468" height="60" border="0" marginheight="0" marginwidth="0" hspace="0" vspace="0" frameborder="0" scrolling="no">
-<a  href="http://media.fastclick.net/w/click.here?sid=1850&m=1&c=3287"  target="_blank"><img src="http://media.fastclick.net/w/get.media?t=n&sid=1850&m=1&f=b&v=1.4&c=3287&r=&d=n" width=468 height=60 border=0 ></a>
+dc.writeln('</iframe>'); // --></script><iframe src="http://media.fastclick.net/w/get.media?t=n&amp;sid=1850&amp;m=1&amp;f=b&amp;v=1.4&amp;c=231&amp;r=&amp;d=f" width="468" height="60" border="0" marginheight="0" marginwidth="0" hspace="0" vspace="0" frameborder="0" scrolling="no">
+<a  href="http://media.fastclick.net/w/click.here?sid=1850&m=1&c=231"  target="_blank"><img src="http://media.fastclick.net/w/get.media?t=n&sid=1850&m=1&f=b&v=1.4&c=231&r=&d=n" width=468 height=60 border=0 ></a>
 </iframe>
 <noscript>
 <a href="http://media.fastclick.net/w/click.here?sid=1850&m=1&c=1"  target="_blank">
@@ -651,6 +651,16 @@ SO YOU SHOULD REVIEW THIS WEB PAGE PERIODICALLY.</strong></span>
       Us Your Homepage</a></font></font></b></td>
   </tr>
   <tr>
-    <td width="100%" height="16" align="center"><script src="http://legacy.flowgo.com/js/branding_js.cfm?title=entertainment&amp;font=000000"></script></td>
+    <td width="100%" height="16" align="center">
+		<style type="text/css">.copyright_text {font-family:Arial, Helvetica, sans-serif; font-size:12px;}</style>
+		<table border="0" cellspacing="2" cellpadding="0" align="center">
+			<tbody><tr>
+				<td align="center" valign="middle" nowrap="" class="copyright_text">© Demand Entertainment, Inc. 2007. All Rights Reserved.</td>
+			</tr>
+			<tr>
+				<td align="center" valign="middle"><img src="http://i.dmdentertainment.com/dm_entertainment.gif" height="24" width="135" border="0"></td>
+			</tr>
+		</tbody></table>
+	</td>
   </tr>
 </tbody></table></p></body></html>
