drivewire.com (archived on 2007-12-28)
{
  "alexa_rank": NaN,
  "analysis_subcorpus": true,
  "categories": "business;shopping",
  "char_count": 18376,
  "classifier_probability": 1.0,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 11.52,
  "homepage_snapshot_redirected_domain": "drivewire.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20070930232634id_/http://www.drivewire.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20070930232634id_/http%3A//drivewire.com",
  "interval": "2007_B",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "B",
  "policy_domain": "drivewire.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20071228221239id_/http%3A//www.drivewire.com/001supportingfiles/privacypolicy.html",
  "policy_title": "Drivewire Privacy Policy",
  "policy_url": "drivewire.com/001supportingfiles/privacypolicy.html",
  "sha1": "9fd05372748fc9ad166e1d0f357ba4ee1695e4ed",
  "simhash": 15244749621445350450,
  "simhash_updated": false,
  "site_hostname": "drivewire.com",
  "site_url": "http://drivewire.com",
  "smog": 14.79,
  "strict_updated": false,
  "timestamp": "20071228221239",
  "word_count": 2960,
  "year": 2007
}

--- a/d/dr/dri/drivewire.com.html
+++ b/d/dr/dri/drivewire.com.html
@@ -1,11 +1,8 @@
-<!--The following is the downloaded HTML source of the drivewire.com privacy policy that was archived on 2007-06-12.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20070612141736id_/http%3A//www.drivewire.com/001supportingfiles/privacypolicy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the drivewire.com privacy policy that was archived on 2007-12-28.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20071228221239id_/http%3A//www.drivewire.com/001supportingfiles/privacypolicy.html) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head>
-<title>Drivewire Auto Parts – Privacy Policy</title>
-<meta name="Keywords" content="auto parts, auto accessories, replacement auto parts, performance parts, brakes, shocks, mufflers, oxygen sensor, headlights, cold air intakes, car covers, air filters">
-<meta name="Description" content="Drivewire Sells at Discount Prices, OEM Parts, Replacement Auto Parts, Performance Parts and Auto Accessories">
-<meta name="robots" content="noindex,nofollow"> 
+<title>Drivewire Privacy Policy</title>
 <link href="../001StyleSheets/drivewire_new.css" rel="stylesheet" type="text/css">
 <style type="text/css">
 <!--
@@ -109,7 +106,50 @@
          <li><a href="testimonials.html"></a><a href="shippingpolicy.html">Shipping Policy</a></li>
          <li><a href="termsconditionsofsale.html">Terms &amp; Conditions </a></li>
          <li><a href="warrantyreturn-policy.html">Warranty Policy</a></li>
-	  </ul>                </td>
+	     </ul>                
+	  <p class="TitleBlue">Vehicles</p>
+	  <ul>
+        <li> <a href="http://www.drivewire.com/acuraparts.html">Acura Parts</a></li>
+	    <li> <a href="http://www.drivewire.com/audiparts.html">Audi Parts</a></li>
+	    <li> <a href="http://www.drivewire.com/bmwparts.html">BMW Parts</a></li>
+	    <li> <a href="http://www.drivewire.com/buickparts.html">Buick Parts</a></li>
+	    <li> <a href="http://www.drivewire.com/cadillacparts.html">Cadillac Parts</a></li>
+	    <li> <a href="http://www.drivewire.com/chevyparts.html">Chevy Parts</a></li>
+	    <li> <a href="http://www.drivewire.com/chryslerparts.html">Chrysler Parts</a></li>
+	    <li> <a href="http://www.drivewire.com/daihatsuparts.html">Daihatsu Parts</a></li>
+	    <li> <a href="http://www.drivewire.com/dodgeparts.html">Dodge Parts</a></li>
+	    <li> <a href="http://www.drivewire.com/fordparts.html">Ford Parts</a></li>
+	    <li> <a href="http://www.drivewire.com/geoparts.html">Geo Parts</a></li>
+	    <li> <a href="http://www.drivewire.com/gmcparts.html">GMC Parts</a></li>
+	    <li> <a href="http://www.drivewire.com/hondaparts.html">Honda Parts</a></li>
+	    <li> <a href="http://www.drivewire.com/hyundaiparts.html">Hyundai Parts</a></li>
+	    <li> <a href="http://www.drivewire.com/infinitiparts.html">Infiniti Parts</a></li>
+	    <li> <a href="http://www.drivewire.com/isuzuparts.html">Isuzu Parts</a></li>
+	    <li> <a href="http://www.drivewire.com/jaguarparts.html">Jaguar Parts</a></li>
+	    <li> <a href="http://www.drivewire.com/jeepparts.html">Jeep Parts</a></li>
+	    <li> <a href="http://www.drivewire.com/kiaparts.html">Kia Parts</a></li>
+	    <li> <a href="http://www.drivewire.com/landroverparts.html">Land Rover Parts</a></li>
+	    <li> <a href="http://www.drivewire.com/lexusparts.html">Lexus Parts</a></li>
+	    <li> <a href="http://www.drivewire.com/lincolnparts.html">Lincoln Parts</a></li>
+	    <li> <a href="http://www.drivewire.com/mazdaparts.html">Mazda Parts</a></li>
+	    <li> <a href="http://www.drivewire.com/mercedesparts.html">Mercedes Parts</a></li>
+	    <li> <a href="http://www.drivewire.com/mercuryparts.html">Mercury Parts</a></li>
+	    <li> <a href="http://www.drivewire.com/mgparts.html">MG Parts</a></li>
+	    <li> <a href="http://www.drivewire.com/miniparts.html">Mini Parts</a></li>
+	    <li> <a href="http://www.drivewire.com/mitsubishiparts.html">Mitsubishi Parts</a></li>
+	    <li> <a href="http://www.drivewire.com/nissanparts.html">Nissan Parts</a></li>
+	    <li> <a href="http://www.drivewire.com/oldsmobileparts.html">Oldsmobile Parts</a></li>
+	    <li> <a href="http://www.drivewire.com/pontiacparts.html">Pontiac Parts</a></li>
+	    <li> <a href="http://www.drivewire.com/porscheparts.html">Porsche Parts</a></li>
+	    <li> <a href="http://www.drivewire.com/saabparts.html">Saab Parts</a></li>
+	    <li> <a href="http://www.drivewire.com/saturnparts.html">Saturn Parts</a></li>
+	    <li> <a href="http://www.drivewire.com/scionparts.html">Scion Parts</a></li>
+	    <li> <a href="http://www.drivewire.com/subaruparts.html">Subaru Parts</a></li>
+	    <li> <a href="http://www.drivewire.com/suzukiparts.html">Suzuki Parts</a></li>
+	    <li> <a href="http://www.drivewire.com/toyotaparts.html">Toyota Parts</a></li>
+	    <li> <a href="http://www.drivewire.com/volkswagenparts.html">Volkswagen Parts</a></li>
+	    <li> <a href="http://www.drivewire.com/volvoparts.html">Volvo Parts</a></li>
+	    </ul>	  <p>&nbsp;</p></td>
           </tr>
         </tbody></table>
 <!-- start popular Parts box -->		</td>
@@ -118,7 +158,7 @@
           <tbody><tr>
             <td class="ceals"><table width="100%" border="0" cellspacing="0" cellpadding="0">
               <tbody><tr>
-                <td class="simpleCellPadding"><a href="http://www.drivewire.com">Home</a> /  <a href="https://secure.auto-service-group.com/ecommerce/customerorders.aspx">Our Policies</a> / Privacy Policy </td>
+                <td class="simpleCellPadding"><a href="http://www.drivewire.com">Home</a> / Privacy Policy </td>
               </tr>
             </tbody></table></td>
           </tr>
@@ -129,9 +169,9 @@
 				
 				<table width="100%" border="0" cellspacing="0" cellpadding="10">
   <tbody><tr>
-    <td><a href="http://www.truste.org/ivalidate.php?url=www.drivewire.com&amp;sealid=101"><img src="/001Images/clickseal.gif" alt="" width="91" height="73" border="0" align="right"></a>
+    <td>
         <h1 class="TitleOrange"> Privacy Policy</h1>
-      <b>Last Updated September 14, 2005</b> <br>
+      <b>Last Updated September 14, 2007</b> <br>
       <br>
         <b><a name="Overview:">Overview</a></b> <br>
       <br>
@@ -527,7 +567,7 @@
         Privacy Policy Changes</a></b> <br>
       <br>
       This Privacy Policy was
-      last changed on September 13, 2005. If we decide to change our privacy policy,
+      last changed on September 13, 2007. If we decide to change our privacy policy,
       we will post those changes to this privacy statement, the homepage, and other
       places we deem appropriate so that you are aware of what information we
       collect, how we use it, and under what circumstances, if any, we disclose it.&nbsp;
@@ -535,21 +575,9 @@
       review it frequently.&nbsp; If we make material changes to this policy, we will
       notify you here, by email, or by means of a notice on our homepage. <br>
       <br>
-      <b><a name="14">14. TRUSTe Licensee</a></b> <br>
-      <br>
-      <a href="http://www.truste.org/ivalidate.php?url=www.drivewire.com&amp;sealid=101"><img src="/001Images/clickseal.gif" alt="" width="91" height="73" border="0" align="left"></a> Auto Service Group Inc. is a licensee of the TRUSTe
-      Privacy Program.&nbsp; TRUSTe is an independent, non-profit organization whose
-      mission is to build user’s trust and confidence in the Internet by promoting
-      the use of fair information practices.&nbsp; This privacy statement covers the site <a href="http://www.drivewire.com/">www.drivewire.com</a>. Because this Web site
-      wants to demonstrate its commitment to your privacy, it has agreed to disclose
-      its information practices and have its privacy practices reviewed for compliance
-      by TRUSTe. <br>
       <br>
       If you have questions or concerns regarding this
-      statement, you should first contact Drivewire’s Privacy Policy Manager at 800.895.8910.&nbsp; If you do not
-      receive acknowledgement of your inquiry or your inquiry has not been
-      satisfactorily address, you should contact TRUSTe at <a href="http://www.truste.org/consumers/watchdog_complaint.php">http://www.truste.org/consumers/watchdog_complaint.php</a>.
-      TRUSTe will then serve as a liaison with us to resolve your concerns. <br>
+      statement, you should first contact Drivewire’s Privacy Policy Manager at 949-748-6400.&nbsp;or at  <a href="mailto:privacy@drivewire.com">privacy@drivewire.com</a><br>
       <br>
       <a href="#Overview:" class="bookmarklinks">Back to Top</a> </td>
   </tr>
@@ -561,13 +589,7 @@
 <!-- start customer test. & add-->
             <td class="ceals"><table class="cealsBG" cellpadding="0" cellspacing="0">
               <tbody><tr>
-                <td class="DWMiniLogo">&nbsp;</td>
-                <td align="center" valign="middle"><h1 class="HomeBlack">Selling Auto Parts &amp; Accessories Since 1999</h1>
-                    <br>
-                    <h2 class="HomeBlackH2">The Internet's Largest Resource for Auto Parts &amp; Performance Accessories</h2></td>
-              </tr>
-              <tr>
-                <td colspan="2" class="cealsPadding"><table width="100%" border="0" cellspacing="0" cellpadding="0">
+                <td class="cealsPadding"><table width="100%" border="0" cellspacing="0" cellpadding="0">
                     <tbody><tr>
                       <td><a href="/001supportingfiles/privacypolicy.html" target="_blank"><img src="http://www.drivewire.com/001images/ceal_trust_new.gif" alt="Trust E Secure Site" width="116" height="31" border="0"></a></td>
                       <td><img src="http://www.drivewire.com/001images/ceal_ver_new.gif" alt="VeriSign Secure Site" width="119" height="31"></td>
@@ -596,14 +618,14 @@
       <td colspan="2" align="center" valign="top" class="footer">
             <a href="http://www.drivewire.com/">Home</a>  |
             <a href="http://www.drivewire.com/001supportingfiles/about.html">About Us</a>  |
-            <a href="http://www.drivewire.com/001supportingfiles/helpFAQ.html">Help - FAQ's</a> |            <a href="http://www.drivewire.com/automotive_resources.html">Automotive Resources</a> |
+            <a href="http://www.drivewire.com/001supportingfiles/helpFAQ.html">Help - FAQ's</a>  |
             <a href="http://www.drivewire.com/001supportingfiles/privacypolicy.html">Privacy Policy</a> |
             <a href="http://www.drivewire.com/001supportingfiles/shippingpolicy.html">Shipping Policy</a> |
             <a href="http://www.drivewire.com/001supportingfiles/sitemap.html">Site Map</a> |
             <a href="http://www.drivewire.com/001supportingfiles/support.html">Support</a> |
             <a href="http://www.drivewire.com/001supportingfiles/termsofuse.html">Terms of Use</a>
             <br>
-            © Copyright 1999-2006 Auto Service Group, Inc.
+            © Copyright 1999-2007 Auto Service Group, Inc.
           <br>
       <a href="http://www.drivewire.com" target="http://www.drivewire.com"><img src="http://www.drivewire.com/001images/logo_footer.gif" alt="DriveWire.com" width="150" height="22" border="0"></a></td>
     </tr>
@@ -637,6 +659,12 @@ s.eVar3=""
 /************* DO NOT ALTER ANYTHING BELOW THIS LINE ! **************/
 var s_code=s.t();if(s_code)document.write(s_code)//--></script>
 <!-- End SiteCatalyst code version: H.10. -->
+<script src="http://www.google-analytics.com/urchin.js" type="text/javascript">
+</script>
+<script type="text/javascript">
+_uacct = "UA-1024607-1";
+urchinTracker();
+</script>
 
 
 </body></html>
