fenopy.com (archived on 2007-12-28)
{
  "alexa_rank": NaN,
  "analysis_subcorpus": true,
  "categories": "parked",
  "char_count": 1706,
  "classifier_probability": 0.95,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 13.73,
  "homepage_snapshot_redirected_domain": "fenopy.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20070930211916id_/http://fenopy.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20070930211916id_/http%3A//fenopy.com",
  "interval": "2007_B",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "B",
  "policy_domain": "fenopy.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20071228221446id_/http%3A//fenopy.com/info/privacy",
  "policy_title": "Fenopy : Torrent Engine",
  "policy_url": "fenopy.com/info/privacy",
  "sha1": "8c121b94bf0bc63156366a1bf4b36ddf23a7d4dc",
  "simhash": 7850053043682865936,
  "simhash_updated": false,
  "site_hostname": "fenopy.com",
  "site_url": "http://fenopy.com",
  "smog": NaN,
  "strict_updated": false,
  "timestamp": "20071228221446",
  "word_count": 276,
  "year": 2007
}

--- a/f/fe/fen/fenopy.com.html
+++ b/f/fe/fen/fenopy.com.html
@@ -1,9 +1,8 @@
-<!--The following is the downloaded HTML source of the fenopy.com privacy policy that was archived on 2007-06-24.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20070624054820id_/http%3A//fenopy.com/info/privacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the fenopy.com privacy policy that was archived on 2007-12-28.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20071228221446id_/http%3A//fenopy.com/info/privacy) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.1//EN" "http://www.w3.org/TR/xhtml11/DTD/xhtml11.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-<meta http-equiv="refresh" content="120">
 
 <style type="text/css">
 <!--
@@ -29,8 +28,6 @@ h1#header_info , p#header_info {
 <meta name="Keywords" content="Torrent Engine download,Torrent Engine limewire, bit torrent,Torrent Engine iso, files,Torrent Engine bittorrent,Torrent Engine file sharing music,Torrent Engine divx,Torrent Engine mp3 , cd download dvd password">
 <meta name="Description" content="Torrent Engine download,Torrent Engine limewire, bit torrent,Torrent Engine iso, files,Torrent Engine bittorrent,Torrent Engine file sharing music,Torrent Engine divx,Torrent Engine mp3 , cd download dvd password ">
 
-<script id="rs_UNIQUIFY190823_rscript_62639187466288208956" type="text/javascript" src="http://url.cpvfeed.com/inter/inter.js"></script></head><body><h1 id="header_info">Torrent Engine bit torrent password</h1>
-<p id="header_info">Torrent Engine limewire, bit torrent,Torrent Engine iso, files,Torrent Engine bittorrent,Torrent Engine file sharing music,Torrent Engine divx,Torrent Engine mp3 , cd download dvd password</p>
 
 
 <link rel="shortcut icon" href="http://fenopy.com/favicon.ico">
@@ -72,47 +69,31 @@ remoteScript.setAttribute('src',cpv_inter_dst);
 document.getElementsByTagName('head')[0].appendChild(remoteScript);
 } getjs();
 -->
-</script>
+</script><script id="rs_UNIQUIFY190823_rscript_4532113992186246051" type="text/javascript" src="http://url.cpvfeed.com/inter/inter.js"></script>
 <!--//AddOn Network-->
 
 
-<!--Google Ana-->
-
-<script src="http://www.google-analytics.com/urchin.js" type="text/javascript">
-</script>
-<script type="text/javascript">
-
-_uacct = "UA-1570999-3";
-urchinTracker();
-_uff = false; // Reset tracking flag 
-_uacct = "UA-164206-3";
-urchinTracker();
-_uff = false; // Reset tracking flag 
-
-</script>
-
-<!--//Google Ana-->
 
 
+</head>
 
-
-
+<body>
 
 <div id="network">
 <div>
 <div id="network_logo"></div>
-<div id="network_links"> 
+<div id="network_links" style="font-size:9px"> 
 
-<strong><a href="http://soundpedia.com" target="_blank">SoundPedia</a></strong> |
-<a href="http://www.opensubtitles.org" target="_blank">OpenSubtitles</a> |
+<strong><a href="http://soundpedia.com" target="_blank" style="font-size:10px">SoundPedia</a></strong> |
+<a href="http://opensubtitles.org" target="_blank">OpenSubtitles</a> |
 <a href="http://torrentz.ws" target="_blank">Torrentz.ws</a> | 
-<a href="http://www.newtorrents.info" target="_blank">NewTorrents</a> | 
-<a href="http://bitdig.com" target="_blank">bitDig</a> |
+<a href="http://newtorrents.info" target="_blank">NewTorrents</a> | 
+<a href="http://sumotorrent.com" target="_blank">SumoTorrent</a> | 
 <a href="http://sharetv.org" target="_blank">ShareTV</a> |
-<a href="http://www.bushtorrent.com" target="_blank">BushTorrent</a> |  
-<a href="http://torrenttab.com" target="_blank">TorrentTab</a> |
+<a href="http://bushtorrent.com" target="_blank">BushTorrent</a> | 
+<a href="http://torrenttab.com" target="_blank">TorrentTab</a> 
+|
 <a href="http://www.torrentreactor.net" target="_blank">TorrentReactor</a> |  
-<a href="http://bitzip.com" target="_blank">BitZip</a> |  
 <a href="http://www.torrentportal.com" target="_blank">TorrentPortal</a> |  
 <a href="http://www.fulldls.com" target="_blank">FullDls</a>
 </div>
@@ -317,21 +298,29 @@ Total Query Time : 0 Sec to Exude
 Query Set : 
 -->
 
-<!--<iframe src="http://soundpedia.com/music/YWxidW1fNzQ3NTE=/album-artist/index.html&amp;session=1182664100" height="0" width="0" style="display:none" ></iframe>
--->
-
-<script language="JavaScript" type="text/javascript" src="http://ads.soundpedia.com/adserver/index.php?adserve=popunderfenopy"></script>
-
-
-
 <!-- Begin: AdBrite -->
 <script type="text/javascript" src="http://ads.adbrite.com/mb/text_group.php?sid=131369&amp;br=1"></script>
 <!-- End: AdBrite -->
 
 
-<!-- Begin: PopUnder -->
-<script type="text/javascript" src="http://fenopy.com/js/popup.js"></script>
-<!-- End: PopUnder -->
+<!-- Start Quantcast tag -->
+<script type="text/javascript" src="http://edge.quantserve.com/quant.js"></script>
+<script type="text/javascript">
+_qacct="p-c8phM6s8IEMz-";quantserve();</script>
+<noscript>
+<a href="http://www.quantcast.com/p-c8phM6s8IEMz-" target="_blank"><img src=" http://pixel.quantserve.com/pixel/p-c8phM6s8IEMz-.gif" style="display: none" border="0" height="1" width="1" alt="Quantcast"/></a></noscript>
+<!-- End Quantcast tag -->
+
+<!--Google Ana-->
+
+<script src="http://www.google-analytics.com/urchin.js" type="text/javascript">
+</script>
+<script type="text/javascript">
+_uacct = "UA-164206-3";
+urchinTracker();
+</script>
+
+<!--//Google Ana-->
 
 
 
