--- a/t/tr/tra/translated.net.html
+++ b/t/tr/tra/translated.net.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the translated.net privacy policy that was archived on 2007-06-23.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20070623120237id_/http%3A//www.translated.net/en/riservatezza.php) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the translated.net privacy policy that was archived on 2007-12-28.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20071228222128id_/http%3A//www.translated.net/en/riservatezza.php) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head>
 <title>TRANSLATED.net :.  Confidentiality</title>
@@ -179,13 +179,19 @@
               <td><img alt="" src="/en/gif/spacer.gif" width="1" height="5"></td>
             </tr>
             <tr>
-              <td><font class="advmenubig"><strong><img alt="" height="8" width="8" src="/en/gif/dota_advmenu.gif"> <a href="http://free.translated.net" class="advmenubig">Free Translation</a></strong></font></td>
+              <td><font class="advmenubig"><strong><img alt="" height="8" width="8" src="/en/gif/dota_advmenu.gif"> <a href="/en/hts.php" class="advmenubig">Translation API</a></strong></font></td>
+            </tr>
+		    <tr>
+              <td><img alt="" src="/en/gif/spacer.gif" width="1" height="5"></td>
+            </tr>
+		    <tr>
+	       <td><font class="advmenubig"><strong><img alt="" height="8" width="8" src="/en/gif/dota_advmenu.gif"> <a href="http://labs.translated.net" class="advmenubig">NLP Labs</a></strong></font></td>
             </tr>
             <tr>
               <td><img alt="" src="/en/gif/spacer.gif" width="1" height="5"></td>
             </tr>
             <tr>
-              <td><font class="advmenubig"><strong><img alt="" height="8" width="8" src="/en/gif/dota_advmenu.gif"> <a href="/en/hts.php" class="advmenubig">Translation API</a></strong></font></td>
+              <td><font class="advmenubig"><strong><img alt="" height="8" width="8" src="/en/gif/dota_advmenu.gif"> <a href="http://free.translated.net" class="advmenubig">Free Translation</a></strong></font></td>
             </tr>
             <tr>
               <td><img alt="" src="/en/gif/spacer.gif" width="1" height="5"></td>
