--- a/g/go/gol/goldsgym.com.html
+++ b/g/go/gol/goldsgym.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the goldsgym.com privacy policy that was archived on 2007-05-23.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20070523020231id_/http%3A//www.goldsgym.com/privacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the goldsgym.com privacy policy that was archived on 2007-12-29.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20071229005251id_/http%3A//www.goldsgym.com/privacy) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head>
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
@@ -13,6 +13,7 @@ Visit www.opencube.com for current QuickMenu Pro downloads and information. -->
 <script language="JavaScript1.2">dqm__codebase = "/inc/menu/"</script>
 <script language="JavaScript1.2" src="/inc/menu/settings.js"></script>
 <script language="JavaScript1.2" src="/inc/menu/dqm_loader.js"></script><script language="JavaScript1.2" src="/inc/menu/browser_ns.js"></script>
+<script type="text/javascript" src="/inc/js/ClickTracksCookies.js"></script>
 <div id="container"><div class="header"><table width="100%" border="0" cellpadding="0" cellspacing="0">
   <tbody><tr>
   	<form name="search" action="/search" method="get"></form>
@@ -35,9 +36,8 @@ Visit www.opencube.com for current QuickMenu Pro downloads and information. -->
   <area shape="rect" coords="26,1,149,85" href="/index.php">
 </map>
 <div id="welcome">
-  <p><b>Welcome</b> | May 22, 2007</p>
-</div>
-<link href="/inc/styles.css" rel="stylesheet" type="text/css">
+  <p><b>Welcome</b> | December 28, 2007</p>
+</div><link href="/inc/styles.css" rel="stylesheet" type="text/css">
 
 
   <div id="main"><table width="100%" cellpadding="0" cellspacing="0">
@@ -97,7 +97,17 @@ Due to the existing regulatory environment, we cannot ensure that all of your pr
 <p></p>
         </div></td>
     </tr></tbody></table></div>
-  <div id="footer"><p>© 2007 Gold's Gym International, Inc. | <a href="/privacy/">Privacy Policy</a> | <a href="/terms/">Terms and Conditions</a> | <a href="/sitemap/">Site Map</a></p></div></div>
+  <div id="footer"><p>© 2007 Gold's Gym International, Inc. | <a href="/privacy/">Privacy Policy</a> | <a href="/terms/">Terms and Conditions</a> | <a href="/sitemap/">Site Map</a></p></div>
+<script type="text/javascript">
+var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
+document.write("\<script src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'>\<\/script>" );
+</script><script src="https://ssl.google-analytics.com/ga.js" type="text/javascript"></script>
+<script type="text/javascript">
+var pageTracker = _gat._getTracker("UA-3249020-1");
+pageTracker._initData();
+pageTracker._trackPageview();
+</script>
+</div>
 
 
 </body></html>
