ashoka.org (archived on 2007-12-29)
{
  "alexa_rank": NaN,
  "analysis_subcorpus": true,
  "categories": "business;education",
  "char_count": 11758,
  "classifier_probability": 0.99,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 13.61,
  "homepage_snapshot_redirected_domain": "ashoka.org",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20071002074809id_/http://www.ashoka.org/",
  "homepage_snapshot_url": "https://web.archive.org/web/20071002074809id_/http%3A//ashoka.org",
  "interval": "2007_B",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "B",
  "policy_domain": "ashoka.org",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20071229011825id_/http%3A//www.ashoka.org/privacy",
  "policy_title": "Ashoka's Privacy Policy | Ashoka.org",
  "policy_url": "ashoka.org/privacy",
  "sha1": "bfbd434190bca195a1bea19719f59587a96547e3",
  "simhash": 16053450343484955929,
  "simhash_updated": false,
  "site_hostname": "ashoka.org",
  "site_url": "http://ashoka.org",
  "smog": 15.73,
  "strict_updated": false,
  "timestamp": "20071229011825",
  "word_count": 1903,
  "year": 2007
}

--- a/a/as/ash/ashoka.org.html
+++ b/a/as/ash/ashoka.org.html
@@ -1,8 +1,9 @@
-<!--The following is the downloaded HTML source of the ashoka.org privacy policy that was archived on 2007-06-23.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20070623055613id_/http%3A//www.ashoka.org/privacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the ashoka.org privacy policy that was archived on 2007-12-29.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20071229011825id_/http%3A//www.ashoka.org/privacy) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd"><html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en"><head>
-
+<meta name="verify-v1" content="UdIe1O/4zATcQeGPyNwHbr8rI/kR2klaHrq73KdB8OI="> 
+<link rel="alternate" type="application/rss+xml" title="Ashoka RSS" href="http://www.ashoka.org/rss/releases">
 <title>Ashoka's Privacy Policy | Ashoka.org</title>
   <script type="text/javascript"> </script>
 
@@ -10,7 +11,7 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <style type="text/css" media="all">@import "/misc/drupal.css";</style><script type="text/javascript" src="http://www.google-analytics.com/urchin.js"></script>
 <base href="http://www.ashoka.org/">
-<style type="text/css" media="all">@import "/themes/ashoka/style.css";</style><style type="text/css" media="all">@import "/misc/tinymce.css";</style><style type="text/css" media="all">@import "/modules/devel/devel.css";</style>
+<style type="text/css" media="all">@import "/themes/ashoka/style.css";</style><style type="text/css" media="all">@import "/misc/tinymce.css";</style><style type="text/css" media="all">@import "/modules/date/date.css";</style><style type="text/css" media="all">@import "/modules/devel/devel.css";</style>
 <style type="text/css" media="screen">@import "themes/ashoka/layout.css";</style>
 <style type="text/css" media="screen">@import "themes/ashoka/menus.css";</style>
 
@@ -40,7 +41,7 @@ Newsletter Sign Up		<form action="http://involve-ashoka.org/ashoka/join.tcl?sour
 <span class="topitem">
 Search<form action="search/node" method="post">
 <input type="hidden" name="edit[form_id]" id="edit-search-form" value="search_form">
-<input type="hidden" name="edit[form_token]" id="a-unique-id" value="680cb0c551a29c5b8650816c18758fd6">
+<input type="hidden" name="edit[form_token]" id="a-unique-id" value="f32b0444b64134e57fbc67215a91cee6">
 <input name="edit[keys]" type="textfield" size="15" value="keyword" onfocus="if(this.value=='keyword')this.value='';" onblur="if(this.value=='')this.value='keyword';">
 <input type="image" name="op" value="Search" src="themes/ashoka/images/go.gif">
 </form>
@@ -167,6 +168,8 @@ Search<form action="search/node" method="post">
 <div id="collage">
 <img src="themes/ashoka/collages/default.jpg">
 </div>
+
+
   <div id="middle">
     <div id="navbar_bottom" class="pullout navbar_bottom">
 
@@ -230,10 +233,10 @@ Search<form action="search/node" method="post">
       <div class="block block-quotes" id="block-quotes-1">
     <div class="content">
 <div class="quotes-quote">
-  Google is a company that believes deeply in entrepreneurship. And this is a company that believes deeply in the power of information. We don’t think there’s another organization that combines these two things in a more compelling way than Ashoka.
+  It's one of the most hopeful and helpful trends around. These folks aren't famous, but they are showing that what it really takes to change the world isn't so much wealth or power as creativity, determination and passion.
 </div>
 <div class="quotes-author">
-  — Sheryl Sandberg, VP Google
+  — Nicholas Kristof, The New York Times
 </div>
 </div>
 </div>
@@ -241,14 +244,13 @@ Search<form action="search/node" method="post">
     <div class="content"><div class="view view-featured-block"><div class="view-content view-content-featured-block"><div class="node featured teaser">
                 
                 
-<h2><a href="venturefund">Ashoka announces the Venture Fund for Leading Social Entrepreneurs</a></h2>
+<h2><a href="lawforall">Human Rights Day 2007</a></h2>
 
-<img src="files/venturefund_0.jpg" class="featuredimg"><br>
+<img src="files/humanrightslogo.jpg" class="featuredimg"><br>
 
-<font face="Arial" size="2"><span style="font-size: 10pt; font-family: Arial">Ashoka invites forward-thinking investors to create a sustainable base for our unique venture model<br></span></font>
+<p>Ashoka supports fellows and the broader human rights movement through its Law for All initiative.</p>
 
-<div class="links"><a class=" readmore" href="venturefund">more <img src="themes/ashoka/images/green_arrow.gif"></a></div>
-
+<div class="links"><a class=" readmore" href="lawforall">more <img src="themes/ashoka/images/green_arrow.gif"></a></div>
 
 </div>
 
@@ -297,7 +299,7 @@ Search<form action="search/node" method="post">
 <div id="footer">
 <a href="about">About Us</a>&nbsp;&nbsp;|&nbsp;&nbsp;<a href="whatwedo">What We Do</a>&nbsp;&nbsp;|&nbsp;&nbsp;<a href="node/24">Our Impact</a>&nbsp;&nbsp;|&nbsp;&nbsp;<a href="getinvolved">Get Involved</a>&nbsp;&nbsp;|&nbsp;&nbsp;<a href="press">Press Room</a>&nbsp;&nbsp;|&nbsp;&nbsp;<a href="resources">Resources</a>&nbsp;&nbsp;|&nbsp;&nbsp;<a href="contact">Contact Us</a>&nbsp;&nbsp;|&nbsp;&nbsp;<a href="sitemap">Site Map</a><br><a href="international">Ashoka International Websites</a> &nbsp;&nbsp;|&nbsp;&nbsp; 
 <a href="privacy">Privacy Policy</a>&nbsp;&nbsp;|&nbsp;&nbsp; 
-<a href="sitemap">Site Map</a>&nbsp;&nbsp;</div>
+<a href="tos">Terms of Service</a>&nbsp;&nbsp;</div>
 
 </div><!-- front / sub -->
 
